[gd_scene load_steps=14 format=3 uid="uid://bkrttqgy0khww"]

[ext_resource type="Texture2D" uid="uid://burcbmdcn3mem" path="res://Assets/Sprites/Enemies/chicken.png" id="1_00hcn"]
[ext_resource type="Script" path="res://Scripts/enemies/chicken.gd" id="1_55k1m"]
[ext_resource type="Texture2D" uid="uid://dwo5ayh5i2a1c" path="res://Assets/Sprites/UI/enemy-health-background.png" id="2_t3uuh"]
[ext_resource type="Texture2D" uid="uid://dhtmsaislbjo6" path="res://Assets/Sprites/UI/enemy-health.png" id="3_h5nii"]
[ext_resource type="Texture2D" uid="uid://ehgt0c02q6ov" path="res://Assets/Sprites/UI/enemy-stamina.png" id="4_u61v0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_efe0g"]
atlas = ExtResource("1_00hcn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wqip"]
atlas = ExtResource("1_00hcn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_00mct"]
atlas = ExtResource("1_00hcn")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgsnq"]
atlas = ExtResource("1_00hcn")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_u4tv3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_efe0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wqip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00mct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgsnq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sl2pr"]
radius = 2.0
height = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1uvrd"]
radius = 91.0055

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g7qek"]
radius = 7.0
height = 22.0

[node name="Chicken" type="CharacterBody2D"]
z_as_relative = false
y_sort_enabled = true
collision_layer = 16
collision_mask = 23
script = ExtResource("1_55k1m")
metadata/_edit_vertical_guides_ = [-43.0]

[node name="Health" type="TextureProgressBar" parent="."]
z_index = 1
z_as_relative = false
offset_left = -4.0
offset_top = -15.0
offset_right = 4.0
offset_bottom = -13.0
texture_under = ExtResource("2_t3uuh")
texture_progress = ExtResource("3_h5nii")

[node name="Stamina" type="TextureProgressBar" parent="."]
z_index = 1
z_as_relative = false
offset_left = -4.0
offset_top = -12.0
offset_right = 4.0
offset_bottom = -10.0
texture_under = ExtResource("2_t3uuh")
texture_progress = ExtResource("4_u61v0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 8)
sprite_frames = SubResource("SpriteFrames_u4tv3")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.486197
offset = Vector2(0, -8)

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_sl2pr")

[node name="FovArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 22

[node name="FieldOfView" type="CollisionShape2D" parent="FovArea"]
shape = SubResource("CircleShape2D_1uvrd")

[node name="EnemyHitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 98

[node name="KljunHitBox" type="CollisionShape2D" parent="EnemyHitBox"]
shape = SubResource("CapsuleShape2D_g7qek")

[connection signal="area_shape_entered" from="FovArea" to="." method="_on_fov_area_area_shape_entered"]
[connection signal="body_shape_entered" from="FovArea" to="." method="_on_fov_area_body_shape_entered"]
[connection signal="body_shape_exited" from="FovArea" to="." method="_on_fov_area_body_shape_exited"]
[connection signal="area_shape_entered" from="EnemyHitBox" to="." method="_on_kljun_area_shape_entered"]
[connection signal="body_shape_entered" from="EnemyHitBox" to="." method="_on_kljun_body_shape_entered"]
